Building the Custoemr experiance. Added the Cart component with its functionality. The Customer can now get its own access token upon loggining.

--- a/ECommerceWithAuth.MVC/Views/Cart/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Cart/Index.cshtml
@@ -1,6 +1,9 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Cart";
+}
 
-<div class="oi oi-cart ">
+<div>
     @(await Html.RenderComponentAsync<CartComponent>(RenderMode.Server))
 </div>
+
 
