--- a/ECommerceWithAuth.MVC/Views/_ViewImports.cshtml
+++ b/ECommerceWithAuth.MVC/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ECommerceWithAuth.MVC
 @using ECommerceWithAuth.MVC.Views
 @using ECommerceWithAuth.MVC.Models
+@using ECommerceWithAuth.MVC.CartService;
 @using DataAccessLibrary.Services.RefitClient;
 @using ECommerceWithAuth.MVC.Views.Shared.Components
 
