--- a/ECommerceWithAuth.MVC/Views/_ViewImports.cshtml
+++ b/ECommerceWithAuth.MVC/Views/_ViewImports.cshtml
@@ -4,5 +4,9 @@
 @using ECommerceWithAuth.MVC.CartService;
 @using DataAccessLibrary.Services.RefitClient;
 @using ECommerceWithAuth.MVC.Views.Shared.Components
+@using Blazored.LocalStorage
+@using Blazored.Toast
+@using Blazored.Toast.Services
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
