--- a/ECommerceWithAuth.MVC/Views/Shared/Components/_Imports.razor
+++ b/ECommerceWithAuth.MVC/Views/Shared/Components/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Authorization
 @using ECommerceWithAuth.MVC.CartService;
+
+@using Blazored.LocalStorage
+@using Blazored.Toast.Services
+@using Blazored.Toast;
