--- a/ECommerceWithAuth.MVC/Views/Shared/_Layout.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ECommerceWithAuth.MVC.styles.css" asp-append-version="true" />
+    <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
+
 </head>
 <body>
     <header class="mb-5">
