--- a/ECommerceWithAuth.MVC/Views/Shared/Components/ShopComponent.razor
+++ b/ECommerceWithAuth.MVC/Views/Shared/Components/ShopComponent.razor
@@ -77,7 +77,16 @@ else
                             <td class="col-2 ">
                                 <span class="text-center p-2 ps-4 pe-2 font-monospace fw-bold text-danger text-opacity-75 
                                         bg-danger bg-opacity-10 rounded-pill" style="font-size:1.1rem;">
-                                    @($"{product.GetCurrentPrice():#.##}")
+                                    @if (loadingPrice)
+                                    {
+                                        <span class="spinner-border text-primary" 
+                                            style="max-width: 24px; max-height: 24px;"></span>
+                                    }
+                                    else
+                                    {
+
+                                        @($"{product.GetCurrentPrice():#.##}")
+                                    }
                                 </span>
                                 <sub class="text-end m-0 p-0 text-primary small text-opacity-75 fw-bold" style="font-size:0.8rem;">
                                     @_currency
@@ -89,7 +98,16 @@ else
                             <td class="col-1 fw-bold text-center"> -- -- </td>
                             <td class="col-2">
                                 <span class="text-center ps-4 pe-2 font-monospace fw-bold" style="font-size:1.1rem;">
-                                    @($"{product.GetCurrentPrice():#.##}")
+                                    @if (loadingPrice)
+                                    {
+                                        <span class="spinner-border text-primary"
+                                            style="max-width: 24px; max-height: 24px;"></span>
+                                    }
+                                    else
+                                    {
+
+                                        @($"{product.GetCurrentPrice():#.##}")
+                                    }
                                 </span>
                                 <sub class="text-end m-0 p-0 text-primary small text-opacity-75 fw-bold" style="font-size:0.8rem;">
                                     @_currency
@@ -107,7 +125,7 @@ else
                                 <option value="1" selected class="fw-bold dropdown-item text-secondary">1</option>
                             </select>
                             <span class="btn btn-success btn-outline-info text-white p-0 ps-1 pe-2 m-0" 
-                                @onclick="(async () => await _cartService.AddToCart(product, selectedQuantity[product.Name]))">
+                                @onclick="(async () => await _cartService.AddToCart(product, selectedQuantity[product.Name], product.Quantity))">
                                 <span class="oi oi-cart " style="font-size: 1.8rem"></span>
                             </span>
                         </td>
