Improved error handling for the cart service. Improved layouts. Changed style on the blazored-toast. The app will now clear the both local & session storage.

--- a/ECommerceWithAuth.MVC/Views/Home/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Home/Index.cshtml
@@ -14,5 +14,11 @@
 {
     <partial name="_ChatWindow" />    
 }
-
+else
+{
+    <script>
+        localStorage.removeItem('cart');
+        sessionStorage.clear();
+    </script>
+}
 
