--- a/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
+++ b/ECommerceWithAuth.MVC/Views/Product/Index.cshtml
@@ -16,7 +16,7 @@
     </h3>
     <div class="start-0">
         <select asp-for="@Model.currency" onchange="sortOut()" id="currency"
-                class="bg-white bg-opacity-100 text-success fw-bold border-2 rounded-pill form-select w-auto border-secondary shadow-sm">
+                class="bg-white text-primary text-center fw-bold border-2 rounded-pill form-select w-auto border-secondary shadow-sm">
             <option value="SEK">SEK</option>
             <option value="USD">USD</option>
             <option value="EUR">EUR</option>
